# PRODIGY_BD_04

./: README.md  config.py  extensions.py  pyproject.toml  run.py
api/: __init__.py
api/database/: users.db
api/models/: UserModel.py
api/routes/: __init__.py
api/routes/users/: __init__.py  route.py
